fix: underline of link do not align to baseline

--- a/assets/css/extended/typst-link.css
+++ b/assets/css/extended/typst-link.css
@@ -2,4 +2,11 @@
 .post-content a[href] {
   box-shadow: none !important;
   text-decoration: none !important;
+  text-underline-offset: auto !important;
+  text-decoration-thickness: from-font;
+}
+
+.post-content a[href] span[style*="text-decoration: underline"] {
+  text-underline-offset: auto !important;
+  text-decoration-thickness: from-font;
 }
